force-app/main/default/objects/Strategic_Opportunity__c/Strategic_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Both existing opportunity referencing and new opportunity creation to be made available on the related list. on Strategic Objective</description>
    <label>Strategic Opportunity</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Strategic OpportunityID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>