force-app/main/default/objects/Strategic_Opportunity__c/fields/Strategic_Objective__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective__c</fullName>
    <label>Strategic Objective</label>
    <referenceTo>StrategicObjective__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Strategic_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>