force-app/main/default/objects/Strategic_Opportunity__c/fields/Strategic_Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective_Name__c</fullName>
    <formula>Strategic_Objective__r.Name</formula>
    <label>Strategic Objective Name</label>
    <type>Text</type>
</CustomField>