force-app/main/default/objects/Strategic_Opportunity__c/validationRules/ValidateParentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateParentAccount</fullName>
    <active>true</active>
    <description>Strategic objective &amp; opportunity parent account should be same</description>
    <errorConditionFormula>AND(
(Strategic_Objective__r.CustomerProfile__r.Account__r.Id  &lt;&gt;  Opportunity__r.Account.Id),
(Strategic_Objective__r.CustomerProfile__r.Account__r.ParentId &lt;&gt;  Opportunity__r.Account.Id ),
(Strategic_Objective__r.CustomerProfile__r.Account__r.Parent.ParentId&lt;&gt;  Opportunity__r.Account.Id )
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Strategic objective &amp; Opportunity Parent Account should be same</errorMessage>
</ValidationRule>